syntax = "proto3";

message Project {
  string id = 1;
  string name = 2;
}

message ListProjectsRequest {
}

service Projects {
  rpc ListProjects(ListProjectsRequest) returns (stream Project) {}
}
